Assure that the docks get informed about an URL change before the GUI is setup (thanks to Frank Reininghaus for the patch!). This prevents that slots from the docks are called with invalid URLs.

BUG: 169103
CCMAIL: frankreininghaus@web.de>

svn path=/trunk/KDE/kdebase/apps/; revision=871525